data/derived/comb/progs/unify/prog3831.ml.out
Characters 312-420:
  ........................."(" ^ (exprToString x1) ^ "<" ^ (exprToString x2) 
  ^ "?" ^ (exprToString x3) ^ ":" ^ (exprToString x4) ^ ")"..
Error: This expression has type string but an expression was expected of type
         float
